maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:11: error: '(' expected but '{' found.
			else if {gauche() ; avance()}
                                ^Escaper:15: error: illegal start of simple expression
}
^